ubuntu-core-launcher (0.1) vivid; urgency=low

  * initial version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 24 Mar 2015 08:15:07 +0100